# Relux

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .yamllint  ADVERSARIAL_AUDIT.md  CHANGELOG-SPEC.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-APACHE  README.md  SECURITY.md  Start-Relux.ps1  deny.toml  install.ps1  install.sh  start-relux.sh  tool-probe.txt
crates/relix-cli/: Cargo.toml
crates/relix-cli/src/: approval.rs  belief.rs  bridge_token.rs  browser.rs  build.rs  call.rs  capability.rs  confidence.rs  config.rs  credentials.rs  dashboard.rs  defaults.rs  doctor.rs  email.rs  eval.rs  execution.rs  export.rs  flow.rs  flow_run.rs  fs.rs  identity.rs  install.rs  judge.rs  knowledge.rs  main.rs  mcp.rs  memory_inspect.rs  mesh.rs  metrics.rs  models.rs  observe.rs  ops.rs  os_secure.rs  pii.rs  ping.rs  planning.rs  provenance.rs  reasoning.rs  release.rs  router.rs  (+15 more)
crates/relix-controller/: Cargo.toml
crates/relix-controller/src/: main.rs
crates/relix-core/: Cargo.toml
crates/relix-core/src/: agent.rs  approval.rs  audit.rs  bundle.rs  capability.rs  channel_health.rs  channel_rate_limit.rs  clock.rs  codec.rs  eventlog.rs  identity.rs  lib.rs  policy.rs  redact.rs  retry.rs  router.rs  types.rs
crates/relix-core/tests/: canonical_policy_default.rs
crates/relix-discord/: Cargo.toml
crates/relix-discord/src/: approval.rs  config.rs  identity.rs  lib.rs  live.rs  messages.rs  mock.rs
crates/relix-discord/tests/: live_discord_api.rs
crates/relix-embedded/: Cargo.toml
crates/relix-embedded/src/: chat.rs  lib.rs  memory.rs
crates/relix-embedded/tests/: embedded_smoke.rs
crates/relix-flow-inspect/: Cargo.toml
crates/relix-flow-inspect/src/: main.rs
crates/relix-plugin-sdk/: Cargo.toml
crates/relix-plugin-sdk/src/: lib.rs
crates/relix-plugin-sdk/tests/: e2e_tls.rs
crates/relix-runtime/: Cargo.toml
crates/relix-runtime/src/: agent_registry.rs  audit_partition.rs  controller_runtime.rs  db.rs  flow_runner.rs  lib.rs
crates/relix-runtime/src/admission/: agent_gate.rs  mod.rs
crates/relix-runtime/src/approval/: caps.rs  dashboard_dispatch.rs  delivery.rs  email_dispatch.rs  email_reply.rs  mirror.rs  mod.rs  multi_dispatch.rs  store.rs  token.rs
crates/relix-runtime/src/bench/: mod.rs
crates/relix-runtime/src/confidence/: cell.rs  config.rs  coordinator.rs  fallback.rs  mod.rs  scorer.rs  self_consistency.rs
crates/relix-runtime/src/coordinator/: mod.rs
crates/relix-runtime/src/credentials/: caps.rs  mod.rs  scheduler.rs  store.rs
crates/relix-runtime/src/db/: lock_order.rs
crates/relix-runtime/src/dispatch/: mod.rs  replay.rs
crates/relix-runtime/src/identity/: caps.rs  mod.rs  research.rs  research_caps.rs  session.rs
crates/relix-runtime/src/knowledge/: autoshare.rs  chronicle.rs  config.rs  coordinator.rs  mod.rs  quality_scorer.rs  remote.rs  service.rs  trust.rs
crates/relix-runtime/src/macros/: mod.rs
crates/relix-runtime/src/manifest/: mod.rs
crates/relix-runtime/tests/: router_node.rs  telegram_controller.rs  tool_policy_coverage.rs  transport_stream.rs  yaml_doc_examples.rs
crates/relix-sdk/: Cargo.toml
crates/relix-sdk/src/: lib.rs
crates/relix-slack/: Cargo.toml
crates/relix-slack/src/: approval.rs  config.rs  identity.rs  lib.rs  live.rs  messages.rs  mock.rs
crates/relix-slack/tests/: live_slack_api.rs
crates/relix-telegram/: Cargo.toml
crates/relix-telegram/src/: approval.rs  config.rs  identity.rs  lib.rs  live.rs  messages.rs  mock.rs  session_store.rs
crates/relix-telegram/tests/: integration.rs  live_bot_api.rs
crates/relix-web-bridge/: Cargo.toml
crates/relix-web-bridge/dashboard-dist/: index.html
crates/relix-web-bridge/src/: activity.rs  adapters.rs  agent.rs  agent_memory.rs  agent_metrics.rs  agent_metrics_mini_mesh_test.rs  agent_token_mini_mesh_test.rs  agents_access.rs  alert_dispatch_mini_mesh_test.rs  approval.rs  approval_get_mini_mesh_test.rs  audit_tenants.rs  auth.rs  belief.rs  blocklist.rs  bridge_back.rs  brief_doc_lock_mini_mesh_test.rs  brief_interaction_mini_mesh_test.rs  browser_captures.rs  browser_sessions.rs  budget.rs  capabilities.rs  channels.rs  chat.rs  companion.rs  confidence.rs  confidence_mini_mesh_test.rs  config.rs  config_api.rs  control_plane.rs  credentials.rs  cron.rs  dashboard.rs  dashboard_auth.rs  delegate.rs  discord.rs  dispatch_stats.rs  email.rs  email_mini_mesh_test.rs  execution.rs  (+73 more)
crates/relix-web-bridge/tests/: invariants.rs
crates/relux-core/: Cargo.toml
crates/relux-core/src/: adapter.rs  adapter_result.rs  agent.rs  approval.rs  artifact.rs  audit.rs  command_tool.rs  hierarchy.rs  lib.rs  mcp.rs  namespace.rs  orchestration.rs  permission.rs  persistent_grant.rs  plugin.rs  prime.rs  proposed_change.rs  redact.rs  run.rs  run_failure.rs  run_log.rs  run_session.rs  run_watchdog.rs  runtime.rs  secret.rs  task.rs  tool.rs  tool_glue.rs
crates/relux-kernel/: Cargo.toml
crates/relux-kernel/src/: adapter.rs  agent_auth.rs  agent_config.rs  agent_presets.rs  ai.rs  auth.rs  builtin.rs  capability_detect.rs  clock.rs  command_exec.rs  command_tool_config.rs  dashboard.rs  doctor.rs  event.rs  introspect.rs  lib.rs  live_run_log.rs  loader.rs  main.rs  mcp.rs  mcp_proposal.rs  mcp_sampling.rs  mcp_stdio.rs  plugin_install.rs  plugin_source.rs  plugin_tool_config.rs  prime.rs  prime_admin_slots.rs  prime_after_action.rs  prime_agent_create.rs  prime_agent_loop.rs  prime_agent_slots.rs  prime_assign_slots.rs  prime_candidate_config.rs  prime_clarify.rs  prime_clarify_memory.rs  prime_command_tool_config.rs  prime_decision.rs  prime_glue.rs  prime_history.rs  (+15 more)
crates/relux-kernel/tests/: mcp_stdio.rs
examples/plugins/web-lookup/: Cargo.toml  plugin.toml
sdks/python/: README.md  pyproject.toml
sdks/python/relix/: __init__.py  client.py  credentials.py  exceptions.py  identity.py  memory.py  observability.py  planning.py  skills.py
sdks/python/tests/: test_async_parity.py  test_client.py  test_memory.py  test_planning.py  test_sse_parser.py
(+3342 files in other folders)
