[package]
name = "relix-cli"
description = "Developer / operator CLI: identity init-org / mint / inspect, ping, run."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "relix-cli"
path = "src/main.rs"

[dependencies]
relix-core.workspace    = true
relix-runtime.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
crossterm.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
reqwest.workspace = true
tar.workspace = true
flate2.workspace = true
time.workspace = true
base64.workspace = true

zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
