[package]
name = "relix-controller"
description = "The Relix daemon binary. One binary, configured per node type via TOML."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "relix-controller"
path = "src/main.rs"

[dependencies]
relix-core.workspace    = true
relix-runtime.workspace = true

tokio.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
