[package]
name = "relix-core"
description = "Shared substrate primitives for Relix: codec, types, bundle, identity, policy, eventlog, audit, capability descriptors."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[lints.rust]
# CORR-D1: relaxed from `forbid` to `deny` because the Windows
# parent-directory fsync path needs `unsafe` to call into Win32
# (CreateFileW + FlushFileBuffers + CloseHandle). The single
# call site that uses `unsafe` carries `#[allow(unsafe_code)]`
# and a load-bearing safety comment; every other site in the
# crate remains denied by default.
unsafe_code = "deny"
missing_docs = "warn"

# Per CONTRIBUTING.md: unwrap/expect forbidden in non-test code, fine in tests.
# Scoped via lib.rs cfg_attr rather than blanket workspace lints (which would also
# fire in `#[cfg(test)]` modules).

[dependencies]
# CORR PART 4: bounded LRU for the per-tenant policy resolver
# cache. Pre-fix path used an unbounded HashMap which on a
# many-tenant deployment grew until process restart.
lru.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
ciborium.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
rand.workspace = true
zeroize.workspace = true
thiserror.workspace = true
time.workspace = true
hex.workspace = true
toml.workspace = true
tracing.workspace = true
async-trait.workspace = true
# REL-18: HMAC-SHA256 for HmacTokenIssuer in agent.rs
hmac.workspace = true
sha2.workspace = true
# Constant-time signature comparison in agent token verification.
subtle.workspace = true
# Shared per-channel proactive rate-limit tracker
# (`channel_rate_limit.rs`) uses `tokio::time::sleep` inside
# the `acquire` await. Time + macros only; the rest of
# relix-core stays runtime-agnostic.
tokio = { workspace = true, features = ["time"] }

# CORR-D1: Windows directory fsync. EventLog::append flushes
# the parent directory's metadata after writing the per-flow
# log file so a crash between the file's `sync_data` and the
# directory entry's commit does not lose the new record. The
# Unix path uses `File::open(parent).sync_all()`; the Windows
# path needs CreateFileW with FILE_FLAG_BACKUP_SEMANTICS +
# FlushFileBuffers, which is not in `std::fs`. Pulled in only
# for Windows targets so non-Windows builds carry no extra
# dependency.
[target.'cfg(windows)'.dependencies]
# CORR-D1: `Win32_Security` is needed because CreateFileW's
# signature takes `*const SECURITY_ATTRIBUTES` — windows-sys
# 0.52 only exposes the function when the security types it
# references are also pulled in via their feature.
windows-sys = { version = "0.52", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
] }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
# `test-util` enables tokio::time::pause/advance used by the
# rate-limit tracker's `acquire_awaits_refill_when_bucket_empty`
# test.
tokio = { workspace = true, features = ["macros", "rt", "test-util", "time"] }
