[package]
name        = "relix-slack"
description = "Task-native Slack channel for Relix. Bot API trait + reqwest-backed live client + mock + identity derivation. Mirrors relix-discord."
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
relix-core.workspace = true
blake3.workspace     = true
serde.workspace      = true
serde_json.workspace = true
toml.workspace       = true
thiserror.workspace  = true
async-trait.workspace = true
tokio                = { workspace = true, features = ["sync", "macros", "time", "rt", "net"] }
tracing.workspace    = true
reqwest.workspace    = true
# PART 2: HMAC-SHA256 for `x-slack-signature` verification on
# inbound interactivity payloads.
hmac.workspace       = true
sha2.workspace       = true
hex.workspace        = true

[dev-dependencies]
tempfile.workspace = true
axum.workspace     = true
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
