[package]
name = "relix-web-bridge"
description = "Local HTTP bridge that turns POST /chat into a Relix SOL chat flow over the mesh. Bridge is a presentation peer — owns no AI provider key, never bypasses identity/policy."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "relix-web-bridge"
path = "src/main.rs"

[dependencies]
relix-core.workspace    = true
relix-runtime.workspace = true
relix-slack.workspace   = true
relix-discord.workspace = true

axum.workspace               = true
tower.workspace              = true
tower-http.workspace         = true
hyper.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
tokio.workspace              = true
toml.workspace               = true
thiserror.workspace          = true
tracing.workspace            = true
tracing-subscriber.workspace = true
clap.workspace               = true
hex.workspace                = true
tempfile.workspace           = true
rand.workspace               = true
# Dashboard operator-login: Argon2id password hashing for the
# first-run admin credential (PHC-string storage).
argon2.workspace             = true
blake3.workspace             = true
sha2.workspace               = true
futures.workspace            = true
async-stream.workspace       = true
bytes.workspace              = true
time.workspace               = true
reqwest.workspace            = true
# SEC PART 2: zeroize the bridge's libp2p secret key + per-
# request cloned copies of AppState.
zeroize.workspace            = true

[dev-dependencies]
ed25519-dalek.workspace = true
hmac.workspace          = true
