[package]
name = "relux-core"
version = "0.1.18"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Canonical Relux core domain types and manifest/permission helpers."
authors = ["Anshul Raman <ramanal@mail.uc.edu>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
