[package]
name = "relux-kernel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Local, in-memory Relux control-plane kernel - wires relux-core domain types into the first deterministic Prime/task/run/tool loop."
authors = ["Anshul Raman <ramanal@mail.uc.edu>"]

[[bin]]
name = "relux-kernel"
path = "src/main.rs"

[dependencies]
relux-core = { path = "../relux-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# Local durable storage for KernelState. Reuses the workspace-pinned rusqlite
# (bundled SQLite - no system dependency) rather than introducing a new version.
rusqlite = { workspace = true }
# Local .zip plugin install/extract. default-features off keeps it minimal:
# only the deflate codec (via flate2, already in the tree) is pulled in - no
# bzip2/zstd/lzma C dependencies.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
# Temp directories for the SqliteStore round-trip tests.
tempfile = { workspace = true }
