[package]
name = "relux-kernel"
version = "0.1.36"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Local, in-memory Relux control-plane kernel - wires relux-core domain types into the first deterministic Prime/task/run/tool loop."
authors = ["Anshul Raman <ramanal@mail.uc.edu>"]

[[bin]]
name = "relux-kernel"
path = "src/main.rs"

[dependencies]
relux-core = { path = "../relux-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# Local durable storage for KernelState. Reuses the workspace-pinned rusqlite
# (bundled SQLite - no system dependency) rather than introducing a new version.
rusqlite = { workspace = true }
# Local .zip plugin install/extract. default-features off keeps it minimal:
# only the deflate codec (via flate2, already in the tree) is pulled in - no
# bzip2/zstd/lzma C dependencies.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Local HTTP API for the dashboard Plugins tab (`relux-kernel serve`). Reuses the
# workspace-pinned axum/tokio so no new HTTP stack enters the tree; `multipart`
# is enabled here for the zip-upload route (feature is additive, scoped to this
# crate's view of axum).
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
# Optional LLM-backed Prime path (OpenRouter). Reuses the workspace-pinned
# reqwest (rustls-tls, json) so no new HTTP/TLS stack enters the tree; the
# deterministic Prime path never touches it.
reqwest = { workspace = true }
# Local operator login (first-run admin password + session cookies). Argon2id is
# the password KDF (workspace-pinned, already in the tree via relix-runtime /
# relix-web-bridge); `rand` mints session ids and `hex` encodes them. No new
# heavy dependency enters the workspace - these are all reused workspace pins.
argon2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
# Restart-persistent sessions: the durable session file stores a SHA-256 hash of
# each opaque session id (never the raw id), so a leaked file cannot mint a
# cookie. SHA-256 is the right primitive for a 256-bit random token-at-rest (no
# salt/KDF needed — argon2 above stays the password KDF). Workspace-pinned,
# already in the tree.
sha2 = { workspace = true }
# At-rest secret encryption: the Windows DPAPI cipher base64-encodes the value over
# the PowerShell child's stdin/stdout and stores base64(CryptProtectData blob).
# Workspace-pinned, already in the tree (tool.pdf transport).
base64 = { workspace = true }

[dev-dependencies]
# Temp directories for the SqliteStore round-trip tests.
tempfile = { workspace = true }
# Drive the `serve` router end to end in tests (oneshot) so the auth middleware
# and the /v1/auth/* handlers are exercised over a real Request, not just unit
# methods. Reuses the workspace-pinned tower already in the tree via axum.
tower = { workspace = true }
